<resources>
    <string name="app_name">JoinMe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Ceci est le fil d\'actualite</string>
    <string name="Place">Place</string>
    <string name="Topic">Topic\'s learning</string>
    <string name="Level">Year of studies</string>
    <string name="Comments">Comments</string>
    <string name="Time">Time</string>

</resources>
