<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.example.pablo.joinme.Create_event">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Place"
            android:textSize="30dp"
            android:id="@+id/txtEssai"/>

        <EditText
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Topic"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/Level"
                    android:textSize="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSeekBar"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:paddingLeft="30dp"/>


            </LinearLayout>


        <SeekBar
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:max="8"
            android:progress="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/timeEvent"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_time"
                    android:text="@string/Time"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="30dp" />



            </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Comments"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"/>



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCreateEvent"
                    android:layout_gravity="center"
                    android:text="Create Event"
                    />






        </LinearLayout>


    </ScrollView>




</LinearLayout>
